[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://Shaders/outline.shader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/width = null
shader_param/outline_color = null

[node name="Tile" type="Area2D"]
script = ExtResource( 1 )

[node name="BackGround" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0.00820923, -88.3135, -178.866, 0.901711, 0.895317, 88.7231, 178.597, 0.901779 )
disabled = true

[node name="Plant" type="Sprite" parent="."]
position = Vector2( 3.68323, -174.339 )

[node name="Building" type="Sprite" parent="."]
z_index = 1

[node name="Timer" type="Timer" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
